[package]
authors = ["Vincent Esche <regexident@gmail.com>"]
description = "Traits for constructing/destructuring from/into a type's internal guts"
documentation = "https://docs.rs/guts"
edition = "2018"
license = "MPL-2.0"
name = "guts"
readme = "README.md"
repository = "https://github.com/regexident/guts"
version = "0.1.1"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
never_type = []
